src/test/deca/syntax/invalid/created/syntax/wrong_lvalue_return.des
left-hand side of assignment is not an lvalue